--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/drawer": "^6.5.7",
     "@react-navigation/native": "^6.1.2",
+    "@react-navigation/stack": "^6.3.11",
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-link": "^4.1.0",
+    "react-native-navigation-actions": "^1.0.4",
     "react-native-reanimated": "^2.14.1",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
